@startuml

title __FORM's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.component {
      namespace form {
        class com.unisa.cinehub.views.component.form.RecensioneFormComponent {
            + RecensioneFormComponent()
            + addListener()
            + close()
            - recensisci()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      namespace form {
        abstract class com.unisa.cinehub.views.component.form.RecensioneFormComponent.RecensioneFormEvent {
            + RecensioneFormEvent()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      namespace form {
        class com.unisa.cinehub.views.component.form.RecensioneFormComponent.SaveEvent {
            ~ SaveEvent()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      namespace form {
        class com.unisa.cinehub.views.component.form.RispostaFormDialog {
            ~ binder : Binder<Recensione>
            - contenuto : TextArea
            - form : FormLayout
            - send : Button
            + RispostaFormDialog()
            + addListener()
            - initForm()
            - validateAndSend()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      namespace form {
        abstract class com.unisa.cinehub.views.component.form.RispostaFormDialog.RispostaFormEvent {
            + RispostaFormEvent()
            + getRecensione()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      namespace form {
        class com.unisa.cinehub.views.component.form.RispostaFormDialog.SaveEvent {
            + SaveEvent()
        }
      }
    }
  }
  

  com.unisa.cinehub.views.component.form.RecensioneFormComponent -up-|> com.vaadin.flow.component.dialog.Dialog
  com.unisa.cinehub.views.component.form.RecensioneFormComponent o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.component.form.RecensioneFormComponent +-down- com.unisa.cinehub.views.component.form.RecensioneFormComponent.RecensioneFormEvent
  com.unisa.cinehub.views.component.form.RecensioneFormComponent +-down- com.unisa.cinehub.views.component.form.RecensioneFormComponent.SaveEvent
  com.unisa.cinehub.views.component.form.RecensioneFormComponent.RecensioneFormEvent -up-|> com.vaadin.flow.component.ComponentEvent
  com.unisa.cinehub.views.component.form.RecensioneFormComponent.SaveEvent -up-|> com.unisa.cinehub.views.component.form.RecensioneFormComponent.RecensioneFormEvent
  com.unisa.cinehub.views.component.form.RispostaFormDialog -up-|> com.vaadin.flow.component.dialog.Dialog
  com.unisa.cinehub.views.component.form.RispostaFormDialog o-- com.unisa.cinehub.data.entity.Recensione : recensione
  com.unisa.cinehub.views.component.form.RispostaFormDialog +-down- com.unisa.cinehub.views.component.form.RispostaFormDialog.RispostaFormEvent
  com.unisa.cinehub.views.component.form.RispostaFormDialog +-down- com.unisa.cinehub.views.component.form.RispostaFormDialog.SaveEvent
  com.unisa.cinehub.views.component.form.RispostaFormDialog.RispostaFormEvent -up-|> com.vaadin.flow.component.ComponentEvent
  com.unisa.cinehub.views.component.form.RispostaFormDialog.RispostaFormEvent o-- com.unisa.cinehub.data.entity.Recensione : recensione
  com.unisa.cinehub.views.component.form.RispostaFormDialog.SaveEvent -up-|> com.unisa.cinehub.views.component.form.RispostaFormDialog.RispostaFormEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
